# Gitdoc

./: .gitignore  alias.info  branch.info  clean  dmesg.info  readme  s.sh
cprimer/array.mon/: fun.cpp  main.cpp
cprimer/array.monr/: fun.cpp  main.cpp
cprimer/arry.c/: fun.s  main  main.cpp  main.s
cprimer/binary/: fun.cpp  main.cpp  makefile
cprimer/bool/: fun.cpp  main.cpp
cprimer/bool.goto/: fun.cpp  main.cl  main.cl.dbug  main.cpp  main.debug  main.g  main.release  makefile  ok.cpp
cprimer/dimension/: fun.cpp  main.cpp
cprimer/hotel/: fun.cpp  fun.hpp  main.cpp
cprimer/hpp/: fun.cpp
cprimer/if/: fun.cpp  main.cpp
cprimer/if.v0.2/: fun.cpp  main.cpp  makefile  readme
cprimer/list/: arr  arr.c  history.txt  list  list.c  list.h  makelist  rand.c  run.c  size  sizeof  sizeof.c  stdio.h  stdlib.h  time.h  two
cprimer/new/: fun.cpp  main.cpp  readme.cpp
cprimer/null/: g.sh  makefile  ok.cpp  readme.cpp
cprimer/one/:   0  8  clang.ginfo  class.cpp  ed  fun.cpp  g.sh  gcc.ginfo  gcc.info  list.cpp  main.cpp  makefile  menu.cpp  mylib.cpp  open.txt  printmessage.cpp  readme.cpp  sizeof.cpp  test.cpp  test.cpp.orig
cprimer/recusion/: ed  fun.cpp  main.cpp  makefile
cprimer/refptr/: .gitignore  CMakeLists.txt  a  a.asm  ed  i.cp  main.cpp  makefile  menu.cpp  mylib.cpp  test.cpp
cprimer/refptr/include/: h.hpp  menu.hpp  mylib.hpp  temptest.hpp  test.hpp
cprimer/rfact/: fun.cpp  main.cpp  makefile
cprimer/stltest/: arraytest.cpp  ed  mylib.cpp  readme  test.cpp  vectortest.cpp
cprimer/str/: fun.cpp  main.cpp  makefile  (+1 more)
doc/: dmap  readme
(+49 files in other folders)
